--- a/animation.html
+++ b/animation.html
@@ -117,13 +117,13 @@
 
 
     #section1 {
-        height: 200px;
+        height: 100%;
         width: 100%;
         background-color: pink;
     }
 
     #section2 {
-        height: 200px;
+        height: 100%;
         width: 100%;
         background-color: yellow;
     }
