--- a/animation.html
+++ b/animation.html
@@ -98,6 +98,7 @@
         // swipedir contains either "none", "left", "right", "top", or "down"
 
        if(swipedir==="down"||swipedir==="none"){
+           console.log(swipedir)
            $(el).removeClass('in').addClass('out')
            $('.main').not(el).addClass('in').removeClass('out')
        }
@@ -105,7 +106,9 @@
     var el2 = document.getElementById('section2');
     swipedetect(el2, function(swipedir){
         // swipedir contains either "none", "left", "right", "top", or "down"
+
         if(swipedir==="down"||swipedir==="none"){
+            console.log(swipedir)
             $(el2).removeClass('in').addClass('out')
             $('.main').not(el2).addClass('in').removeClass('out')
         }
@@ -117,13 +120,13 @@
 
 
     #section1 {
-        height: 100%;
+        height: 80%;
         width: 100%;
         background-color: pink;
     }
 
     #section2 {
-        height: 100%;
+        height: 80%;
         width: 100%;
         background-color: yellow;
     }
@@ -145,7 +148,7 @@
 
     @keyframes animatebottom {
         from {
-            top: 300px;
+            top: 100%;
             opacity: 0;
             display: none;
         }
@@ -166,7 +169,7 @@
 
         to {
             display: none;
-            top: -300px;
+            top: -100%;
             opacity: 0;
         }
     }
